<resources>
    <string name="app_name">AmaliaCocina_01</string>
    <string name="UnPollo">uncuartopollo</string>
    <string name="Promo">Promociones</string>
    <string name="MDP">MedioPollo</string>
    <string name="carrito">CarritoCompras</string>
    <string name="carrito2">CarritoCompras2</string>
    <string name="mensaje">mensaje</string>
    <string name="perfil">perfil</string>
    <string name="gps">gps</string>
    <string name="home">home</string>


    <string name="noticias">noticia</string>
    <string name="falta">falta</string>
    <string name="tambien">tambien</string>
    <string name="falta_2">flata_2</string>
    <string name="tambien_2">tambien_2022</string>
    <string name="title_activity_cocteles">CoctelesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>