<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE8F4"
    android:orientation="vertical"
    tools:context=".PolloPromocionesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#F20000">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="Promociones"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton17"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/carrito"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="irpedidos"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp">

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/UnPollo"
                android:onClick="irpedidos"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/promiouncuarto" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="1/4 + gaseosa"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:text="1/4 de pollo a la braza acompañado de crocantes papitas fritas, ensalada y gaseosa personal a elegir"
            android:textColor="#000000"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:text="S/ 17.00"
                android:textColor="#FF0000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="+"
                android:textColor="#FF0000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp">

            <ImageButton
                android:id="@+id/imageButton13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/MDP"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ammediopollo" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="1/2 pollo + gaseosa"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1/2 de pollo a la braza acompañado de crocantes papitas fritas, ensalada y gaseosa personal a elegir + ensada + una porsion de papa "
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="S/ 17.00"
            android:textColor="#FF0000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>
</LinearLayout>