<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE8F4"
    android:onClick="irCarritoCompras"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#F20000"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btncupones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#F20000"
                    android:onClick="irCupones"
                    app:srcCompat="@drawable/ic_baseline_dehaze_24"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="!HOLA¡"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="¿que se te antoja hoy?"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton15"
                    android:layout_width="49dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="#F20000"
                    android:onClick="irCarritoCompras"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/carrito"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="BIENVENIDOS A AMALIA COCINA"
            android:textColor="#FF0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:background="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnpollo"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:onClick="irPollo"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ampollodescarga"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="111dp"
                        android:layout_weight="1"
                        android:text="pollo ala braza, pollo entero + ensalada + papas doradas + 1 gaseasa familiar"
                        android:textColor="#0B0000"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnparrillasfuego"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:onClick="irParrillasFuego"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/amresparrilla"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="88dp"
                android:layout_weight="1"
                android:text="parrillas al intante"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnlomosaltado"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:onClick="irLomoSaltado"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/amlomosaltado"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="93dp"
                android:layout_weight="1"
                android:text="platos menu del dia (entrega)"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnparillas"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:onClick="irParrillas"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/amres"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="87dp"
                android:layout_weight="1"
                android:text="platos a la parrilla medio combo familiar o personal"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnbebidas"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="irBebidas"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ambebidass"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="110dp"
                android:layout_height="71dp"
                android:layout_weight="1"
                android:text="bebidas"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btncocteles"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:onClick="irCocteles"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/amcoctelpisco"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="62dp"
                        android:layout_height="59dp"
                        android:layout_weight="1"
                        android:text="cocteles"
                        android:textColor="#000000"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btncerrarsesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="CerrarSesion"
                android:text="Cerrar Sesion"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="#EF0202" />

            <Button
                android:id="@+id/btnregistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irIdenticarse"
                android:text="IDENTIFICARSE"
                android:textStyle="bold"
                app:backgroundTint="#EF0202" />

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AmaliaMenu"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"

        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/menu_navigation">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="15dp">

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnnotificaciones"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:background="#FFE8F4"
                    android:contentDescription="@string/carrito2"
                    android:onClick="irNotificacione"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_baseline_notifications_none_24"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="17dp"
                android:gravity="center"
                android:onClick="irgps"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btngps"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:background="#FFE8F4"
                    android:contentDescription="@string/gps"
                    android:onClick="irgps"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_baseline_location_on_24"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="17dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnhome"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:background="#FFE8F4"
                    android:contentDescription="@string/home"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_baseline_home_24"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnmensaje"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:background="#FFE8F4"
                    android:contentDescription="@string/mensaje"
                    android:onClick="irChats"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_baseline_message_24"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="18dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnperfil"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:background="#FFE8F4"
                    android:contentDescription="@string/perfil"
                    android:onClick="irPerfil"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_baseline_perm_identity_24"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </TableRow>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>